add centralize logging
