# server/router.go
@@ -2,12 +2,15 @@ package server
 
 import (
 	_ "byfood-interview/docs"
+	"byfood-interview/process-url/handler"
+	"byfood-interview/server/middleware"
 	"net/http"
 
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 func (s *Server) routes() {
+	s.Router.Use(middleware.Logger)
 	s.Router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
 	api := s.Router.PathPrefix("/api/v1/").Subrouter()
@@ -23,4 +26,7 @@ func (s *Server) routes() {
 	api.HandleFunc("/books", s.BookHandler.GetAllBooks()).Methods(http.MethodGet)
 	api.HandleFunc("/books/{id}", s.BookHandler.UpdateBook()).Methods(http.MethodPut)
 	api.HandleFunc("/books/{id}", s.BookHandler.DeleteBook()).Methods(http.MethodDelete)
+
+	// URL cleanup routes
+	api.HandleFunc("/process-url", handler.ProcessURLHandler()).Methods(http.MethodPost)
 }
